A few changes to javascript for ease of use. Change to application.scss to fix spacing of affixed navbar. Change to buyer_calendar to show full day of the week in appointments for UE. Change to properties/new to make fields required before submittal.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -67,6 +67,7 @@ body {
   max-height: 100px;
   background: rgba(100, 104, 104, 0.5);
   affix: top;
+    .navbar-right{ margin-top: -5px;}
 
 
 }
